# Synthetic_benchmark_db

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
configs/: benchmark_v0.1.yaml
docs/: DATASET_CARD.md  DATASET_SCHEMA.md  INGREDIENT_NAME_AUDIT_V0.1.md  Knowledge_Guided_Synthetic_Benchmark_Design_v2.md  PILOT_V0.1_REVIEW.md  PROGRESS_REPORT.md  PROJECT_SCOPE.md  SMOKE_TEST.md
scripts/: example_generate_and_evaluate.py  generate_benchmark.py
src/synth_bench/: __init__.py
src/synth_bench/benchmark/: __init__.py  baselines.py  evaluator.py  metrics.py
src/synth_bench/canonical/: __init__.py  loader.py  models.py
src/synth_bench/knowledge/: __init__.py  claim_rules.py  fda_rules.py  ingredient_knowledge.py
src/synth_bench/knowledge/lexicons/: ingredient_names_v0.1.yaml
src/synth_bench/llm/: __init__.py  realizer.py
src/synth_bench/pipeline/: __init__.py  generator.py  split.py
src/synth_bench/transform/: __init__.py  engine.py
src/synth_bench/transform/operators/: __init__.py  compound.py  label_ops.py  rename.py
src/synth_bench/validation/: __init__.py  rules.py  validator.py
tests/: conftest.py  test_benchmark.py  test_canonical_models.py  test_claim_rules.py  test_fda_rules.py  test_fndds_loader.py  test_generate_benchmark_script.py  test_ingredient_knowledge.py  test_llm_realizer.py  test_pipeline.py  test_transformation_engine.py  test_validation.py
