[project]
name = "synth-bench"
version = "0.1.0"
description = "Knowledge-guided Synthetic Benchmark for Ingredient Parsing and Mapping"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "nusol",
    "pandas>=2.0.0",
    "pydantic>=2.13.0",
    "pyyaml>=6.0",
    "typer>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/synth_bench"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
nusol = { path = "../NuSol-T", editable = true }

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]
